--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
+        <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
     <body>
@@ -29,12 +30,22 @@
                 <a href="about.html">About</a>
             </nav>
 
+            <div class="header">
+                <h1>COMPARISON OF<br/>BIKE SHARING PROGRAMS<br/>IN SELECT U.S. CITITES</h1>
+            </div>
+
             <div class="body">
-               <h1></h1>
+                <div class="intro-text">
+                    <p>The topic of bike sharing grew out of personal interest of Parsons Institute for Information Mapping (PIIM) visiting researcher, Luca Nitchke.  As his work is largely focused on urban development, the political and social aspects of bike sharing was a rich topic that could be examined in a deeper way. Little scientific work has been done on bike sharing, especially with a direct focus on comparing the many systems across the nation. PIIM’s New York City location, shared interest in the topic, and the active debate around CitiBike taking place in the city created an excellent opportunity for this project.</p>
+                </div>
+                <div class="col-1">1</div>
+                <div class="col-2">2</div>
+                <div class="col-3">3</div>
+                <div class="col-4">4</div>
             </div>
 
             <div class="footer">
-               Copyright info MMXV PIIM
+                Copyright info MMXV PIIM
             </div>
 
         </div>
