--- a/programs/_template.html
+++ b/programs/_template.html
@@ -38,9 +38,9 @@
             <div class="body box">
 
                 <section class="section_title">
-                    <div class="col_2 block"><h2>Citi Bike</h2></div>
+                    <div class="col_2 block"><h2>Program Name</h2></div>
                     <div class="col_2 block">
-                        <p>NEW YORK CITY, NY || 5.27.2013 || <a href="http://www.citibikenyc.com/">Official Website</a></p>
+                        <p>CITY || 00.00.0000 || <a href="www.###.com">Official Website</a></p>
                     </div>
                 </section>
 
@@ -51,9 +51,9 @@
                     <div class="col_2 block"><img class="img_col_2" src="../img/map/ny_dot_map.svg">
                         
                         <!-- CITY GRAPH -->
-                        <div class="city_graph"><img class="img_col_1" src="../img/chart/ny_chart_avg.svg"></div>
+                        <div class="city_graph"><h4>legend</h4><img class="img_col_1" src="../img/chart/ny_chart.svg"></div>
                         <!-- CITY MAP -->
-                        <div class="city_us_map"><img class="img_col_1" src="../img/us_map/us_dot_map_ny.svg"></a></div>
+                        <div class="city_us_map"><img class="img_col_1" src="../img/us_map/us_dot_map_b.svg"></a></div>
                     </div>
 
                 </section>
@@ -70,68 +70,65 @@
                             </tr>
                             <tr>
                                 <td width="226px">Annual Membership Cost</td>
-                                <td>$149</td>
+                                <td>$###</td>
                             </tr>
                             <tr>
                                 <td>Cost per Station (annual)</td>
-                                <td>$0.46</td>
+                                <td>$###</td>
                             </tr>
                             <tr>
                                 <td>Cost per Square Mile</td>
-                                <td>$9.03</td>
+                                <td>###</td>
                             </tr>
                             <tr>
                                 <th colspan="2"><br/>Convenience</th>
                             </tr>
                             <tr>
                                 <td>Bike</td>
-                                <td>6,000</td>
+                                <td>###</td>
                             </tr>
                             <tr>
                                 <td>Station</td>
-                                <td>325</td>
+                                <td>###</td>
                             </tr>
                             <tr>
                                 <td>Stations per Square Mile</td>
-                                <td>19.7</td>
+                                <td>###</td>
                             </tr>
                             <tr>
                                 <th colspan="2"><br/>System Area</th>
                             </tr>
                             <tr>
                                 <td>System Area</td>
-                                <td>16.5 mi<sup>2</sup></td>
+                                <td>###</td>
                             </tr>
                             <tr>
                                 <th colspan="2"><br/>Activity</th>
                             </tr>
                             <tr>
                                 <td>Bike Trips (annual)</td>
-                                <td>9,09,135</td>
+                                <td>###</td>
                             </tr>
                             <tr>
                                 <td>Bike Trips per Day <br/>(average)</td>
-                                <td>24,592</td>
+                                <td>###</td>
                             </tr>
                             <tr>
                                 <td>Bike Trips per Day per Bike (average)</td>
-                                <td>4.1</td>
+                                <td>###</td>
                             </tr>
                             <tr>
                                 <th colspan="2"><br/>System Size</th>
                             </tr>
                             <tr>
                                 <td>Inhabitants</td>
-                                <td>8,405,837</td>
+                                <td>###</td>
                             </tr>
                             <tr>
                                 <td>Inhabitants per Bike</td>
-                                <td>1,401</td>
+                                <td>###</td>
                             </tr>
                         </table>
-                        <br>
-                        <p><strong>Additional Information</strong>
-                            <br>N/A</p>
                     </div>
 
                 </section>
@@ -150,6 +147,7 @@
                             <li><a href="chattanooga.html">Chattanooga | Bike Chattanooga</a></li>
                             <li><a href="chicago.html">Chicago | Divvy Bikes</a></li>
                             <li><a href="columbus.html">Columbus | Cogo Bike Share</a></li>
+                            <li><a href="denver.html">Denver | Denver B-Cycle</a></li>
                         </ul>
                     </div>
 
@@ -158,6 +156,7 @@
                             <li><a href="denver.html">Denver | Denver B-Cycle</a></li>
                             <li><a href="houston.html">Houston | Houston B-Cycle</a></li>
                             <li><a href="minneapolis.html">Minneapolis | Niceride Minnesota</a></li>
+                            <li><a href="newyork.html">New York | Citi Bike</a></li>
                             <li><a href="sanfrancisco.html">San Francisco Bay Area | Bay Area Bike Share</a></li>
                             <li><a href="washington.html">Washington DC | Captial Bikeshare</a></li>
                         </ul>
