--- a/programs/chattanooga.html
+++ b/programs/chattanooga.html
@@ -38,9 +38,9 @@
             <div class="body box">
 
                 <section class="section_title">
-                    <div class="col_2 block"><h2>Citi Bike</h2></div>
+                    <div class="col_2 block"><h2>Bike Chattanooga</h2></div>
                     <div class="col_2 block">
-                        <p>NEW YORK CITY, NY || 5.27.2013 || <a href="http://www.citibikenyc.com/">Official Website</a></p>
+                        <p>CHATTANOOGA, TN || 7.23.2012 || <a href="http://www.bikechattanooga.com/">Official Website</a></p>
                     </div>
                 </section>
 
@@ -48,12 +48,12 @@
                 <!--  LEFT COLUMN  -->
                 <section class="left_col">
                     <!-- US MAP -->
-                    <div class="col_2 block"><img class="img_col_2" src="../img/map/ny_dot_map.svg">
+                    <div class="col_2 block"><img class="img_col_2" src="../img/map/chattanooga_dot_map.svg">
                         
                         <!-- CITY GRAPH -->
-                        <div class="city_graph"><img class="img_col_1" src="../img/chart/ny_chart_avg.svg"></div>
+                        <div class="city_graph"><img class="img_col_1" src="../img/chart/chattanooga_chart_avg.svg"></div>
                         <!-- CITY MAP -->
-                        <div class="city_us_map"><img class="img_col_1" src="../img/us_map/us_dot_map_ny.svg"></a></div>
+                        <div class="city_us_map"><img class="img_col_1" src="../img/us_map/us_dot_map_chattanooga.svg"></a></div>
                     </div>
 
                 </section>
@@ -70,63 +70,63 @@
                             </tr>
                             <tr>
                                 <td width="226px">Annual Membership Cost</td>
-                                <td>$149</td>
+                                <td>$75</td>
                             </tr>
                             <tr>
                                 <td>Cost per Station (annual)</td>
-                                <td>$0.46</td>
+                                <td>$2.34</td>
                             </tr>
                             <tr>
                                 <td>Cost per Square Mile</td>
-                                <td>$9.03</td>
+                                <td>$28.68</td>
                             </tr>
                             <tr>
                                 <th colspan="2"><br/>Convenience</th>
                             </tr>
                             <tr>
                                 <td>Bike</td>
-                                <td>6,000</td>
+                                <td>300</td>
                             </tr>
                             <tr>
                                 <td>Station</td>
-                                <td>325</td>
+                                <td>32</td>
                             </tr>
                             <tr>
                                 <td>Stations per Square Mile</td>
-                                <td>19.7</td>
+                                <td>12.2</td>
                             </tr>
                             <tr>
                                 <th colspan="2"><br/>System Area</th>
                             </tr>
                             <tr>
                                 <td>System Area</td>
-                                <td>16.5 mi<sup>2</sup></td>
+                                <td>2.6 mi<sup>2</sup></td>
                             </tr>
                             <tr>
                                 <th colspan="2"><br/>Activity</th>
                             </tr>
                             <tr>
                                 <td>Bike Trips (annual)</td>
-                                <td>9,09,135</td>
+                                <td>75,000</td>
                             </tr>
                             <tr>
                                 <td>Bike Trips per Day <br/>(average)</td>
-                                <td>24,592</td>
+                                <td>205</td>
                             </tr>
                             <tr>
                                 <td>Bike Trips per Day per Bike (average)</td>
-                                <td>4.1</td>
+                                <td>0.7</td>
                             </tr>
                             <tr>
                                 <th colspan="2"><br/>System Size</th>
                             </tr>
                             <tr>
                                 <td>Inhabitants</td>
-                                <td>8,405,837</td>
+                                <td>173,366</td>
                             </tr>
                             <tr>
                                 <td>Inhabitants per Bike</td>
-                                <td>1,401</td>
+                                <td>578</td>
                             </tr>
                         </table>
                         <br>
@@ -147,17 +147,17 @@
                         <ul>
                             <li><a href="austin.html">Austin | Austin B-Cycle</a></li>
                             <li><a href="boston.html">Boston | Hubway Boston</a></li>
-                            <li><a href="chattanooga.html">Chattanooga | Bike Chattanooga</a></li>
                             <li><a href="chicago.html">Chicago | Divvy Bikes</a></li>
                             <li><a href="columbus.html">Columbus | Cogo Bike Share</a></li>
+                            <li><a href="denver.html">Denver | Denver B-Cycle</a></li>
                         </ul>
                     </div>
 
                     <div class="col_2 block">
                         <ul>
-                            <li><a href="denver.html">Denver | Denver B-Cycle</a></li>
                             <li><a href="houston.html">Houston | Houston B-Cycle</a></li>
                             <li><a href="minneapolis.html">Minneapolis | Niceride Minnesota</a></li>
+                            <li><a href="newyork.html">New York | Citi Bike</a></li>
                             <li><a href="sanfrancisco.html">San Francisco Bay Area | Bay Area Bike Share</a></li>
                             <li><a href="washington.html">Washington DC | Captial Bikeshare</a></li>
                         </ul>
