--- a/programs/denver.html
+++ b/programs/denver.html
@@ -38,9 +38,9 @@
             <div class="body box">
 
                 <section class="section_title">
-                    <div class="col_2 block"><h2>Citi Bike</h2></div>
+                    <div class="col_2 block"><h2>Denver B-cycle</h2></div>
                     <div class="col_2 block">
-                        <p>NEW YORK CITY, NY || 5.27.2013 || <a href="http://www.citibikenyc.com/">Official Website</a></p>
+                        <p>DENVER, CO || 4.22.2010 || <a href="https://denver.bcycle.com/">Official Website</a></p>
                     </div>
                 </section>
 
@@ -48,12 +48,12 @@
                 <!--  LEFT COLUMN  -->
                 <section class="left_col">
                     <!-- US MAP -->
-                    <div class="col_2 block"><img class="img_col_2" src="../img/map/ny_dot_map.svg">
+                    <div class="col_2 block"><img class="img_col_2" src="../img/map/denver_dot_map.svg">
                         
                         <!-- CITY GRAPH -->
-                        <div class="city_graph"><img class="img_col_1" src="../img/chart/ny_chart_avg.svg"></div>
+                        <div class="city_graph"><img class="img_col_1" src="../img/chart/denver_chart_avg.svg"></div>
                         <!-- CITY MAP -->
-                        <div class="city_us_map"><img class="img_col_1" src="../img/us_map/us_dot_map_ny.svg"></a></div>
+                        <div class="city_us_map"><img class="img_col_1" src="../img/us_map/us_dot_map_denver.svg"></a></div>
                     </div>
 
                 </section>
@@ -70,63 +70,63 @@
                             </tr>
                             <tr>
                                 <td width="226px">Annual Membership Cost</td>
-                                <td>$149</td>
+                                <td>$80</td>
                             </tr>
                             <tr>
                                 <td>Cost per Station (annual)</td>
-                                <td>$0.46</td>
+                                <td>$0.98</td>
                             </tr>
                             <tr>
                                 <td>Cost per Square Mile</td>
-                                <td>$9.03</td>
+                                <td>$10.83</td>
                             </tr>
                             <tr>
                                 <th colspan="2"><br/>Convenience</th>
                             </tr>
                             <tr>
                                 <td>Bike</td>
-                                <td>6,000</td>
+                                <td>709</td>
                             </tr>
                             <tr>
                                 <td>Station</td>
-                                <td>325</td>
+                                <td>82</td>
                             </tr>
                             <tr>
                                 <td>Stations per Square Mile</td>
-                                <td>19.7</td>
+                                <td>11.1</td>
                             </tr>
                             <tr>
                                 <th colspan="2"><br/>System Area</th>
                             </tr>
                             <tr>
                                 <td>System Area</td>
-                                <td>16.5 mi<sup>2</sup></td>
+                                <td>7.4 mi<sup>2</sup></td>
                             </tr>
                             <tr>
                                 <th colspan="2"><br/>Activity</th>
                             </tr>
                             <tr>
                                 <td>Bike Trips (annual)</td>
-                                <td>9,09,135</td>
+                                <td>263,110</td>
                             </tr>
                             <tr>
                                 <td>Bike Trips per Day <br/>(average)</td>
-                                <td>24,592</td>
+                                <td>913</td>
                             </tr>
                             <tr>
                                 <td>Bike Trips per Day per Bike (average)</td>
-                                <td>4.1</td>
+                                <td>1.3</td>
                             </tr>
                             <tr>
                                 <th colspan="2"><br/>System Size</th>
                             </tr>
                             <tr>
                                 <td>Inhabitants</td>
-                                <td>8,405,837</td>
+                                <td>649,495</td>
                             </tr>
                             <tr>
                                 <td>Inhabitants per Bike</td>
-                                <td>1,401</td>
+                                <td>916</td>
                             </tr>
                         </table>
                         <br>
@@ -155,9 +155,9 @@
 
                     <div class="col_2 block">
                         <ul>
-                            <li><a href="denver.html">Denver | Denver B-Cycle</a></li>
                             <li><a href="houston.html">Houston | Houston B-Cycle</a></li>
                             <li><a href="minneapolis.html">Minneapolis | Niceride Minnesota</a></li>
+                            <li><a href="newyork.html">New York | Citi Bike</a></li>
                             <li><a href="sanfrancisco.html">San Francisco Bay Area | Bay Area Bike Share</a></li>
                             <li><a href="washington.html">Washington DC | Captial Bikeshare</a></li>
                         </ul>
